# Advent-of-Code-2023

./: .gitignore  .pylintrc  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/aoc/: __init__.py  day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_x.py
src/aoc_2023/: __init__.py
tests/: test_1.py  test_2.py  test_3.py  test_4.py  test_5.py  test_6.py  test_x.py
