[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["René Gentzen <rene.gentzen@mittelstand.ai>"]
readme = "README.md"
packages = [{include = "aoc_2023", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
