[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["René Gentzen <rene.gentzen@mittelstand.ai>"]
readme = "README.md"
packages = [{ include = "aoc", from = "src" }]

[tool.poetry.scripts]
day_1 = 'aoc.day_1:main'

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
