[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = "My solutions for the Advent of Code 2023"
authors = ["René Gentzen <rene.gentzen@mittelstand.ai>"]
readme = "README.md"
packages = [{ include = "aoc", from = "src" }]

[tool.poetry.scripts]
day_1 = 'aoc.day_1:main'
day_2 = 'aoc.day_2:main'
day_3 = 'aoc.day_3:main'
day_4 = 'aoc.day_4:main'
day_5 = 'aoc.day_5:main'

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
